2008-12-08
	* Fix runtime debugging macros again
	* Big hddtemp rewrite
	* Remove README from git and ignore it
	* Remove obsolete documentation

2008-12-07
	* Removing $freq_dyn and $freq_dyn_g due to license issues (see sf.net
	tracker bug #2166612)
	* Allow more than 9 CPUs for CPU stats (bug 2155500)
	* Fix broken $execbar (bug 2133709)
	* Don't put unit with hddtemp values for consistency (bug 2133107)
	* Limit $battery_percent to 100 (bug 2145006)
	* Fix runtime debugging macros
	* Make unit of all temperature objects selectable
	* Make Conky in dock mode a withdrawn window

2008-12-06
	* Switching from svn to git repository.  The repo can be viewed from
	http://git.omp.am/?p=conky.git;a=summary and you can clone the repo with:
	git clone git://git.omp.am/conky.git
	* Fix for wrong usage of strncat (thanks Pavol)
	* Adds a variable if_xmms2_connected to hide objects when xmms2d is not
	running (thanks Lassi)
	* Fix for buffer overflow with $execi (thanks Cesare)
	* Fetch volume through Audacious API (thanks Erik)

2008-12-06
	* Removed duplicate sanity check for diskio

2008-11-30
	* Added runtime debugging output

2008-11-29
	* Added template support

2008-10-08
	* Applied OpenBSD patches
	* Added $if_mpd_playing patch (thanks tarpman)

2008-09-24
	* Introduced (buggy) support for IMAP IDLE
	* Added support for MOC (the console audio player) (thanks henux)
	* Added scroll step patch (thanks asto)

2008-09-11
	* Maybe fix missing include bug
	(http://bugs.gentoo.org/show_bug.cgi?id=235233)
	* Improve timed_thread interval timing
	* Improve Conky's overall interval timing
	* Added small patch to support negative values (such as negative disk
	capacity) (thanks hinokind)

2008-09-10
	* Improved hddtemp support

2008-09-07
	* Fixed bug with freq_dyn on x86_64 (thanks Miroslav)
	* Fixed buffer overflow in update_net_stats() (thanks Miroslav)
	* Small fix for nvidia mem freq (thanks Cezary)

2008-08-14
	* Conky 1.6.1 released